Prouct: se agrega funciones para cargar marcas.
- La funcion para hacer peticiones a la api del recurso "marca" ahora
  soporta el metodo "get" para consultar todas las marcas que estan en el
  sistema.
- Se agrega controlador para manejar la consulta "get" del recurso marca.
- Se agrega funcion limpiar el select de marcas e insertar nuevas opsiones
  a partit de una lista.
- Se acomoda el boton guardar del modal para Marcas, esto para llevar
  coerencia y estetica.

--- a/templates/Producto/modal_brand_form.html
+++ b/templates/Producto/modal_brand_form.html
@@ -18,14 +18,13 @@
                         <input class="form-control" id="id_marca_modal" maxlength="30" name="marca" type="text">
                         <span id="help-marca" class="help-block"></span>
                     </div>
-                    <br/>
-                    <button type="submit" class="btn btn-primary" id="btnmarca">
-                        <i class=" glyphicon glyphicon-floppy-saved"></i> Guardar
-                    </button>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Salir</button>
+                <button type="submit" class="btn btn-success" id="btnmarca">
+                    <i class=" glyphicon glyphicon-floppy-saved"></i> Guardar
+                </button>
             </div>
         </div>
     </div>
