Product: Fix se permite diferenciar entre peticiones put y post
- ahora se direrencia entre peticiones put y post, lo que evita ese
  conflicto al usar el formulario para los productos.
- soluciona problema al incertar mensaje de error enel campo marca, esto
  debido a id de etiqueta repetido.

--- a/templates/Producto/modal_brand_form.html
+++ b/templates/Producto/modal_brand_form.html
@@ -16,7 +16,7 @@
                     <div class="form-group">
                         <label class="control-label">Marca</label>
                         <input class="form-control" id="id_marca_modal" maxlength="30" name="marca" type="text">
-                        <span id="help-marca" class="help-block"></span>
+                        <span id="help-marca-name" class="help-block"></span>
                     </div>
                 </form>
             </div>
