Product: Se agrega soporte a combinacion de teclas.
- En la seccion de Productos ahora se puede abrir los modals mediante
  conbinacion de teclas.
- Presionando "alt + 8" se abrira el modal para agregar producto.
- Presionando "alt + 9" se abrira el modal para agregar marca.

--- a/templates/Producto/producto_list.html
+++ b/templates/Producto/producto_list.html
@@ -157,6 +157,7 @@
 {% block script %}
     <!-- AdminLTE App -->
     {% load static %}
+    <script src="{% static 'js/jquery.hotkeys.js' %}"></script>
     <script src="{% static 'js/product/product-ajax.js' %}"></script>
     <script type="text/javascript">
         var base_api_url = '{{ url_api }}';
