Product: Se agrega link en la barra de navegacion para generar barcodes
- El link permitira acceder a la interfaz para generar codigos de barra
  para imprimir.

--- a/templates/include/sidebar.html
+++ b/templates/include/sidebar.html
@@ -30,7 +30,7 @@
                 </a>
                 <ul class="treeview-menu">
                     <li><a href="{% url 'Producto:url_lista' 1 %}"><i class="fa fa-circle-o"></i>Lista de productos</a></li>
-                    <li><a href="{% url 'Producto:url_nuevo' %}"><i class="fa fa-circle-o"></i>Agregar producto</a></li>
+                    <li><a href="{% url 'Producto:url_generate_barcodes' %}"><i class="fa fa-circle-o"></i>Imprimir codigos de barras</a></li>
                 </ul>
             </li>
             <li class="treeview">
