Product: Se agrega una segunda plantilla para imprimir barcodes
- La nueva plantilla puede contener 20 codigos de barra, ahora ya podemos
  elegir entre esta plantilla de 20 codigos y la anterior de 30 codigos.

--- a/static/css/product/template-sticker.css
+++ b/static/css/product/template-sticker.css
@@ -8,7 +8,7 @@
     list-style: none;
 }
 
-.sticker-30 {
+.sticker-30, .sticker-20 {
     margin: 1em 0 0 1em;
     padding: 2em;
     width: 10em;
@@ -19,6 +19,11 @@
     float: left;
     transition: background 0.2s;
     box-shadow: 0 0 5px rgba(0, 0, 0, 8);
+}
+
+.sticker-20 {
+    width: 15.5em;
+    height: 3em;
 }
 
 .sticker-selected {
