--- a/templates/Producto/product_barcode.html
+++ b/templates/Producto/product_barcode.html
@@ -65,6 +65,7 @@
             <div class="box-body">
                 <select class="form-control" id="select-template">
                     <option value="0">---------------------------------</option>
+                    <option value="20">Plantilla de 20 stickers</option>
                     <option value="30">Plantilla de 30 stickers (J-5260)</option>
                 </select>
             </div>
