Product: Se agrega tercera plantilla para imprimir barcodes
- La nueva plantilla puede contener un maximo de 150 codigos de barra,
  aumento ahora la cantidad de posibilidades.

--- a/templates/Producto/product_barcode.html
+++ b/templates/Producto/product_barcode.html
@@ -67,6 +67,7 @@
                     <option value="0">---------------------------------</option>
                     <option value="20">Plantilla de 20 stickers</option>
                     <option value="30">Plantilla de 30 stickers (J-5260)</option>
+                    <option value="150">Plantilla de 150 stickers </option>
                 </select>
             </div>
         </div>
