--- a/static/css/product/template-sticker.css
+++ b/static/css/product/template-sticker.css
@@ -8,7 +8,7 @@
     list-style: none;
 }
 
-.sticker-30, .sticker-20 {
+.sticker-20, .sticker-30, .sticker-150 {
     margin: 1em 0 0 1em;
     padding: 2em;
     width: 10em;
@@ -24,6 +24,12 @@
 .sticker-20 {
     width: 15.5em;
     height: 3em;
+}
+
+.sticker-150 {
+    width: 4.5em;
+    height: 1.5em;
+    padding: 0 0 0 1.5em;
 }
 
 .sticker-selected {
