--- a/templates/Estadistica/invoice_app.html
+++ b/templates/Estadistica/invoice_app.html
@@ -12,119 +12,57 @@
 
 {% block conte %}
 
-<div class="panel panel-default offer">
-  	<div class="panel-heading">
-		<div class="row">
-			<div class="col-xs-2 col-sm-4">
-		    	<strong class="hidden-xs">Marcas disponibles</strong> <span class="badge pull-rigth">{{encontrado_marcas}} / {{total_marcas}}</span>
-		  	</div>
-		  	<div class="col-xs-10 col-sm-7 col-sm-offset-1">
-                <form action="{% url 'Producto:url_lista_marca' 1 %}" method="get">
-		    	    <input id="buscar_marca" name="buscar_marca" type="text" class="form-control" placeholder="Buscar">
-                </form>
-		  	</div>
-		</div>
-  	</div>
-  	<div class="panel-body">
-        <div class="table-responsive">
-        {% include 'include/loading.html'  %}
-		<table class="table table-hover">
-			<thead>
-				<tr>
-					<td><strong>Marca</strong></td>
-				</tr>
-			</thead>
-			<tbody>
-            {% if not object_list %}
-                <tr>
-                    <td>--------------</td>
-                    <td>------</td>
-                </tr>
-            {% endif %}
-			{% for cuenta in object_list %}
-				<tr>
-					<td><a href="{% url 'Producto:url_lista' 1 %}?marca_prod={{ cuenta.creado }}" title="Ver productos de esta marca." class="btn btn-default btn-sm btn-block">{{cuenta.creado}}</a></td>
-
-					<td><a href=""></a>
-						<div class="btn-group pull-right">
-                            <button type="button" title="Opciones." class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
-                                <span class="glyphicon glyphicon-cog"></span> <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li>
-                                    <a href="{% url 'Producto:url_actualizar_marca' cuenta.id %}">
-                                        <span class="glyphicon glyphicon-floppy-open"></span> Editar
-                                    </a>
-                                </li>
-                                <li class="divider"></li>
-                                <li>
-                                    <a href="{% url 'Producto:url_eliminar_marca' cuenta.id %}">
-                                        <span class="glyphicon glyphicon-floppy-remove"></span> Eliminar
-                                    </a>
-                                </li>
-                            </ul>
-						</div>
-					</td>
-				</tr>
-			{% endfor %}
-			</tbody>
-		</table>
-	</div>
-	</div>
-	<div class="panel-footer">
-		<div class="row">
-			<div class="col-xs-12 col-ml-6 col-ml-offset-3">
-                <div class="text-center">
-                    <ul class="pagination">
-                      <li>
-                        {% if page_obj.has_previous %}
-                          <a href="?page={{ page_obj.previous_page_number }}">
-                            Anterior
-                          </a>
-                        {% else %}
-                          <span>Anterior</span>
-                        {% endif %}
-                      </li>
-
-                      {% for page_number in paginator.page_range %}
-                        {% if page_number == page_obj.number %}
-                          <li class="active">
-                            <span>{{ page_number }}</span>
-                          </li>
-                        {% else %}
-                          <li>
-                            <a href="?page={{ page_number }}">
-                              {{ page_number }}
-                            </a>
-                          </li>
-                        {% endif %}
-                      {% endfor %}
-
-                      <li>
-                        {% if page_obj.has_next %}
-                          <a href="?page={{ page_obj.next_page_number }}">
-                            Siguiente
-                          </a>
-                        {% else %}
-                          <span>Siguiente</span>
-                        {% endif %}
-                      </li>
-                    </ul>
+    <div class="panel panel-default offer">
+        <div class="panel-heading">
+            <div class="row">
+                <div class="col-xs-2 col-sm-4">
+                    <strong class="hidden-xs">Facturas disponibles</strong>
+                    <span class="badge pull-rigth">{{ count_invoices }} / {{ count_invoices }}</span>
                 </div>
-			</div>
-			
-		</div>
-
-
-	</div>
-</div>
+                <div class="col-xs-10 col-sm-7 col-sm-offset-1">
+                    <form action="{% url 'Producto:url_lista_marca' 1 %}"
+                          method="get">
+                        <input id="buscar_marca" name="buscar_marca"
+                               type="text" class="form-control"
+                               placeholder="Buscar">
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="panel-body">
+            <div class="table-responsive">
+                {% include 'include/loading.html' %}
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <td><strong>Folio</strong></td>
+                            <td><strong>Provedor</strong></td>
+                            <td><strong>Monto</strong></td>
+                            <td><strong>Estado</strong></td>
+                            <td><strong>Fecha de emicion</strong></td>
+                            <td><strong>Fecha limite</strong></td>
+                        </tr>
+                    </thead>
+                    <tbody id="list-invoices"></tbody>
+                </table>
+            </div>
+        </div>
+        <div class="panel-footer">
+            <div class="row">
+                <div class="col-xs-12 col-ml-6 col-ml-offset-3">
+                    <div class="text-center"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
 
 {% block script %}
+    {% load static %}
+    <script src="{% static 'js/estadistica/estadistica.js' %}"></script>
     <script type="text/javascript">
-        var $codigo = $('#buscar_prod')
-        $(document).ready($codigo.focus());
-        var url_invoice = '/url/';
+        var url_invoice = '/api/invoice/';
+        $(document).ready(load_invoices());
     </script>
 {% endblock %}
