Sale: Se agrega cambios al template para nuevos js

--- a/templates/Venta/VentaTemplate/index.html
+++ b/templates/Venta/VentaTemplate/index.html
@@ -16,11 +16,12 @@
     {% include 'Venta/VentaTemplate/modal.html' %}
 
     {% include 'Venta/VentaTemplate/btn-top.html' %}
-
+<div class="col-lg-7">
     <div class="box box-success">
         <div class="box-header with-border">
             <h3 class="box-title"><i class="fa fa-shopping-cart"></i></h3>
             <form id="formxD">
+                {% csrf_token %}
                 <div class="form-group">
                     <div class="col-lg-6">
                         <input type="text" class="form-control" id="codigo" name="codigo" placeholder="Codigo de barras del producto">
@@ -42,85 +43,29 @@
             <div class="table-responsive">
                 <table class="table table-hover">
                     <thead class="thead-footer thead">
-                    {% if data %}
-                        <tr>
-                            <td><strong>Codigo</strong></td>
-                            <td><strong>Producto</strong></td>
-                            <td><strong>Precio</strong></td>
-                            <td><strong>Mayoreo</strong></td>
-                            <td></td>
-                        </tr>
-                    {% endif %}
                     </thead>
                     <tbody id="tVentaProd">
-                        {% if data %}
-                            {% for item in data %}
-                                <tr>
-                                    <td class="cod">{{ item.codigo }}</td>
-                                    <td title="{{ item.descripcion }}">{{ item.descripcion|slice:":35" }}</td>
-                                    {% if item.tprecio == True %}
-                                    <td>{{item.pmayoreo}}</td>
-                                    <td>
-                                        <div class="btn-group" data-toggle="buttons">
-                                            <label class="btn btx btn-xs btn-success active">
-                                                <input type="checkbox" autocomplete="off" checked>
-                                                <span class="glyphicon glyphicon-thumbs-up"></span>
-                                            </label>
-                                        </div>
-                                    </td>
-                                    {% else %}
-                                    <td>{{item.punitario}}</td>
-                                    <td>
-                                        <div class="btn-group" data-toggle="buttons">
-                                            <label class="btn btx btn-xs btn-danger">
-                                                <input type="checkbox" autocomplete="off">
-                                                <span class="glyphicon glyphicon-thumbs-down"></span>
-                                            </label>
-                                        </div>
-                                    </td>
-                                    {% endif %}
-
-                                    <td>
-                                        <div class="btn-group btn-group-xs">
-                                            <button type="button" class="btn btn-success btn-xs aumentar"><span class="glyphicon glyphicon-plus-sign"></span></button>
-                                            <button class="btn btn-info">{{item.cantidad}}</button>
-                                            <button type="button" class="btn btn-warning btn-xs eliminar pull-right"><span class="glyphicon glyphicon-minus-sign"></span></button>
-                                        </div>
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        {% endif %}
                     </tbody>
                     <tfoot class="thead-footer tfooter">
-                    {% if data %}
-                        <tr>
-                            <td><strong>Total:</strong></td>
-                            <td class="total"><strong>$ {{ subtotal }}</strong></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                    {% else %}
-                        <tr>
-                            <td><strong>Total:</strong></td>
-                            <td class="total"><strong>$ 0</strong></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                    {% endif %}
                     </tfoot>
                 </table>
             </div>
         </div>
     <!-- /.box-body -->
     </div>
-
-
+    {% csrf_token %}
+</div>
 {% endblock %}
 
 {% block script %}
+    {% load static %}
+    <script src="{% static 'js/sale/sales.js' %}"></script>
 	<script type="text/javascript">
+        var url_search_product ='{% url "Venta:url_search_product" %}';
+        var url_change_product ='{% url "Venta:url_change_product" %}';
+        var url_cart_status ='{% url "Venta:url_cart_status" %}';
+        var url_cart_pay ='{% url "Venta:url_cart_pay" %}';
+        var url_ticket ='/Tiket/';
         var $codigo = $('#codigo');
         var $tablaVenta = $('#tVentaProd');
         var $efectivo = $('#efectivo');
@@ -301,35 +246,7 @@
             return false;
         }
 
-        function Buscarpro(e){
-            var dato = $codigo.val();
-            $.ajax({
-                async: false,
-            	data : {'cod': dato},
-            	url : '{% url "Venta:url_buscar_ajax" %}',
-            	type : 'get',
-            	success: function(data){
-                    $tablaVenta.html('');
-                    if ($('.thead-footer').html() == '') {
-                        $('.thead').html('<tr><td><strong>Codigo</strong></td><td><strong>Producto</strong></td><td><strong>Precio</strong></td><td><strong>Mayoreo</strong></td><td></td></tr>');
-                        $('.tfooter').html('<tr><td><strong>Total:</strong></td><td class="total"><strong></strong></td><td></td><td></td><td></td></tr>');
-                    }
-                    $.each(data.cuenta, function(i, item){
-                        if(item.tprecio== false) {
-                            $tablaVenta.append(item_product(item.codigo, item.descripcion, item.punitario, item.cantidad, false));
-                        }else{
-                            $tablaVenta.append(item_product(item.codigo, item.descripcion, item.pmayoreo, item.cantidad, true));
-                        }
-                    });
-                    if (data.buscado) {
-                        $tablaVenta.children('tr').addClass('success loading');
-                    }
-                    set_total(data.subtotal, data.descuento ,data.total);
-            	}
-            });
-            $codigo.val('').focus();
-            return false;
-        }
+
 
         function Pagar(e){
             var dato = $efectivo.val();
@@ -339,7 +256,11 @@
                 async : false,
                 data : {'efectivo': dato, 'descuento': $descuento.val()},
                 url : {% url "Venta:url_pagar" %},
-                type : 'get',
+                type : 'post',
+        beforeSend: function(request) {
+            request.setRequestHeader("X-CSRFToken", $('[name=csrfmiddlewaretoken]').val());
+            $('.loading-container').removeClass('hidden');
+        },
                 success : function(data){
                     $efectivo.val('');
                     $efectivo.focus();
