--- a/templates/Venta/VentaTemplate/btn-top.html
+++ b/templates/Venta/VentaTemplate/btn-top.html
@@ -34,7 +34,9 @@
                                     <span class="input-group-addon">
                                         <span class="glyphicon glyphicon-usd"></span>
                                     </span>
-                                    <input id="cash" type="text" class="form-control text-center" value="0">
+                                    <div class="tooltip-demo">
+                                        <input id="cash" type="text" class="form-control text-center" value="0" data-container="body" data-toggle="popover" data-placement="top" data-content="">
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-xs-5 col-xs-offset-2">
