--- a/templates/Venta/VentaTemplate/modal.html
+++ b/templates/Venta/VentaTemplate/modal.html
@@ -1,41 +1,15 @@
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" xmlns="http://www.w3.org/1999/html">
+<div class="modal fade" id="suggestions" tabindex="-1" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title" id="myModalLabel"><i class="glyphicon glyphicon-shopping-cart"></i> Cobro de productos</h4>
+                <h4 class="modal-title" id="suggestionsLabel"><i class="glyphicon glyphicon-search "></i> Productos sugeridos</h4>
             </div>
             <div class="modal-body">
-                <p>Monto a cobrar.</p>
-                <h2 class="total" data-total="{{ total }}" data-subtotal="{{ subtotal }}"><strong>$ {{ total }} ({{ subtotal }} - {{ descuento }})</strong></h2>
-                <div id="mensaje">
-                </div>
-                <p>Por favor, ingrese la cantidad con la que el cliente pagara.</p>
-
-                <form id="formPago" class="form-inline">
-                    <div class="input-group col-xs-4">
-                        <span class="input-group-addon">%</span>
-                        <input type="number" class="form-control" id="descuento" name="descuento" placeholder="Porcentaje de descuento" min="0" step="1" max="100" value="{{ valor_descuento }}">
-                    </div>
-                    <div class="input-group col-xs-7">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-usd"></i></span>
-                        <input type="number" class="form-control" id="efectivo" name="efectivo" placeholder="Cantidad en forma numerica" min="0" step="0.01">
-                    </div>
-                    <br/>
-                    <br/>
-                    <button type="submit" class="btn btn-primary" id="btnefectivo">
-                        <i class=" glyphicon glyphicon-hand-right"></i> Pagar ahora
-                    </button>
-                </form>
-            </div>
-            <div class="modal-footer">
-
-                <div class="box-body" id="pdf">
-
-                </div>
-
-                <button type="button" class="btn btn-default" data-dismiss="modal">Salir</button>
+                <table class="table table-hover">
+                    <tbody id="modal-body"></tbody>
+                </table>
             </div>
         </div>
     </div>
