Sale:  Se habilita baton para limpiar carrito de compra
- Ahora el boton "limpiar" vaciara todos los productos que esten en el
  carrito de compra.

--- a/templates/Venta/VentaTemplate/btn-top.html
+++ b/templates/Venta/VentaTemplate/btn-top.html
@@ -57,9 +57,9 @@
                             <i class="fa fa-money"></i>
                             <p>Pagar</p>
                         </button>
-                        <button id="cancelar" type="button" class="btn btn-app pull-right" title="Elimina la lista de compra">
+                        <button id="clean_cart" type="button" class="btn btn-app pull-right" title="Elimina la lista de compra">
                             <i class="fa fa-times-circle"></i>
-                            <p>Cancelar</p>
+                            <p>Limpiar</p>
                         </button>
                     </div>
                 </div>
