Fix: problema al editar productos code39
- Debido a que el campo de codigo estaba marcado como number, y los
  codigos 39 pueden contener letras. al momento de editarlo, este cuadro
  aparecia como vaacio.
- Al momento de editarlo, se mandaba ese campo en blanco (editandolo en
  blanco), lo que probocaba que el algoritmo le generara un codigo 39
  nuevo.

--- a/templates/Producto/modal_product_edit.html
+++ b/templates/Producto/modal_product_edit.html
@@ -30,7 +30,7 @@
 {#                    Coigo de barras#}
                     <div class="form-group col-md-6">
                         <label for="codigo">Codico de barras</label>
-                        <input type="number" class="form-control" id="codigo" placeholder="Codico de barras">
+                        <input type="text" class="form-control" id="codigo" placeholder="Codico de barras">
                         <span id="help-codigo" class="help-block"></span>
                     </div>
                 </div>
