Sale: Se agrega control de teclas del punto de venta
- alt + 9: selecciona el input del codigo de barras.
- alt + 8: selecciona el input del efectivo.
- alt + 7: selecciona el select del descuento.
- alt + 1: paga la cuenta (click al boton de pagar).

--- a/templates/Venta/VentaTemplate/index.html
+++ b/templates/Venta/VentaTemplate/index.html
@@ -49,6 +49,7 @@
 
 {% block script %}
     {% load static %}
+    <script src="{% static 'js/jquery.hotkeys.js' %}"></script>
     <script src="{% static 'js/sale/sales.js' %}"></script>
     <script type="text/javascript">
         var url_search_product = '{% url "Venta:url_search_product" %}';
