--- a/templates/Venta/VentaTemplate/index.html
+++ b/templates/Venta/VentaTemplate/index.html
@@ -6,6 +6,11 @@
 
 {% block encabezado %} Hacer Venta{% endblock %}
 
+{% block style %}
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/sale/sale.css' %}">
+{% endblock %}
+
 {% block breadcrumb %}
     <li class="active"><i class="fa fa-shopping-cart"></i> Hacer venta</li>
 {% endblock %}
@@ -22,7 +27,7 @@
                     {% csrf_token %}
                     <div class="form-group">
                         <div class="col-lg-12">
-                            <input type="text" class="form-control" id="codigo" name="codigo" placeholder="Codigo de barras del producto">
+                            <input type="text" class="form-control input-lg" id="codigo" name="codigo" placeholder="Codigo de barras del producto">
                         </div>
                     </div>
                 </form>
@@ -32,7 +37,7 @@
                     </button>
                 </div>
             </div>
-            <div class="box-body">
+            <div class="box-body font-one-point-four">
                 <div class="table-responsive">
                     <table class="table table-hover">
                         <thead class="thead-footer thead"></thead>
