Varios: se agrega una DataTables al proyecto
- atatables es una libreria js que permite interactuar cun una tabla de
  manera mas inamica.

--- a/templates/varios/listed.html
+++ b/templates/varios/listed.html
@@ -50,6 +50,8 @@
     <!-- AdminLTE App -->
     {% load static %}
     <script src="{% static 'js/jquery.hotkeys.js' %}"></script>
+        <script src="{% static 'js/tools/datatables/jquery.dataTables.min.js' %}"></script>
+        <script src="{% static 'js/tools/datatables/dataTables.bootstrap.min.js' %}"></script>
 
     <script src="{% static 'js/various/listed.js' %}"></script>
     <script type="text/javascript">
