Various: Ordenamiento inicial por nombre en los listados
- Se agrega link en el menu para acceer a los listados
- Ordenamiento inicial en funcion al nombre.

--- a/templates/include/sidebar.html
+++ b/templates/include/sidebar.html
@@ -53,7 +53,7 @@
                 <ul class="treeview-menu">
                     <li><a href="#"><i class="fa fa-circle-o"></i>Biografias</a></li>
                     <li><a href="#"><i class="fa fa-circle-o"></i>Mapas</a></li>
-                    <li><a href="#"><i class="fa fa-circle-o"></i>Monografias</a></li>
+                    <li><a href="{% url 'varios:url_listed' %}"><i class="fa fa-circle-o"></i>Monografias</a></li>
                 </ul>
             </li>
             <li class="treeview">
