--- a/templates/varios/listed.html
+++ b/templates/varios/listed.html
@@ -3,6 +3,7 @@
 {% block style %}
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/loading.css' %}">
+    <link rel="stylesheet" href="{% static 'css/tools/datatables/datatables.min.css' %}">
 {% endblock %}
 
 {% block title %} Listados {% endblock %}
@@ -50,9 +51,9 @@
     <!-- AdminLTE App -->
     {% load static %}
     <script src="{% static 'js/jquery.hotkeys.js' %}"></script>
-        <script src="{% static 'js/tools/datatables/jquery.dataTables.min.js' %}"></script>
-        <script src="{% static 'js/tools/datatables/dataTables.bootstrap.min.js' %}"></script>
-
+    <script src="{% static 'js/tools/datatables/datatables.min.js' %}"></script>
+    <script src="{% static 'js/tools/datatables/pdfmake.min.js' %}"></script>
+    <script src="{% static 'js/tools/datatables/vfs_fonts.js' %}"></script>
     <script src="{% static 'js/various/listed.js' %}"></script>
     <script type="text/javascript">
         var url_api_listed = '{{ url_api }}';
