--- a/templates/varios/listed.html
+++ b/templates/varios/listed.html
@@ -16,6 +16,24 @@
 
 {% block conte %}
 
+    <div class="modal modal-danger fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" id="confirmation-modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Confirmar</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Esta acción puede modificar la numeración de toda la lista, debes confirmar para continuar.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" id="modal-btn-si">Si</button>
+                    <button type="button" class="btn btn-primary" id="modal-btn-no">No</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="box">
         <div class="box-header with-border">
             <h3 class="box-title">
