Various: se agrega soporte para dar de alta registro
- la apiu ahora soporta el agregar nuevos registros
- Se agrega modal con formulario para gestionar los registros.
- Se agrega soporte para que el usuario pueda agregar nuevos registros a
  la tabla

--- a/templates/varios/listed.html
+++ b/templates/varios/listed.html
@@ -16,6 +16,8 @@
 
 {% block conte %}
 
+    {% include 'varios/modal_listed.html' %}
+
     <div class="modal modal-danger fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" id="confirmation-modal">
         <div class="modal-dialog">
             <div class="modal-content">
