Various: Se agrega soporte para editar items de los listados.
- Se habilita url para dar soporte a los metodos PUT, DELETE y GET
  (sinlge) a la api de listas.
- Ahora la interfaz permite editar un item de la lista dando doble click
  en el renglon del item.

--- a/templates/varios/listed.html
+++ b/templates/varios/listed.html
@@ -53,6 +53,7 @@
             <table id="table-listed" class="table table-hover">
                 <thead>
                 <tr>
+                    <th><strong>pk</strong></th>
                     <th><strong>Numero</strong></th>
                     <th><strong>Nombre</strong></th>
                     <th class="hidden-xs"><strong>Tipo</strong></th>
