Various: Se agrega soporte para enumerar cada tipo de lista por separado
- Ahora se puede re numerar las listas teniendo en cuenta el tipo de
  lista, mapa, monografia o biografia. Con esto las listas se comportaran
  como si fueran objetos independientes

--- a/templates/varios/listed.html
+++ b/templates/varios/listed.html
@@ -26,7 +26,7 @@
                     <h4 class="modal-title" id="myModalLabel">Confirmar</h4>
                 </div>
                 <div class="modal-body">
-                    <p>Esta acción puede modificar la numeración de toda la lista, debes confirmar para continuar.</p>
+                    <p>Esta acción puede <strong>modificar la numeración</strong> de la lista de tipo <strong id="type_alert"></strong>, debes confirmar para continuar.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" id="modal-btn-si">Si</button>
