Various: Se actualiza formulario de listado a los nuevos campos
- Ya es posible agregar y modificar  el listado con los nuevos 2 campo.

--- a/templates/varios/listed.html
+++ b/templates/varios/listed.html
@@ -54,10 +54,12 @@
                 <thead>
                 <tr>
                     <th><strong>pk</strong></th>
-                    <th><strong>Numero</strong></th>
+                    <th><strong>Número</strong></th>
                     <th><strong>Nombre</strong></th>
                     <th class="hidden-xs"><strong>Tipo</strong></th>
                     <th class="hidden-xs"><strong>Estado</strong></th>
+                    <th class="hidden-xs"><strong>Referencia</strong></th>
+                    <th class="hidden-xs"><strong>Proveedor</strong></th>
                 </tr>
                 </thead>
                 <tbody id="table-body">
