Various: Se agrega obcion a provedores en listados
- Se agrega una nueva opcion de proveedor (BOB) para los listados

--- a/templates/varios/modal_listed.html
+++ b/templates/varios/modal_listed.html
@@ -54,6 +54,7 @@
                                     <option value="" selected="">---------</option>
                                     <option value="1">SUN RISE</option>
                                     <option value="2">RAF</option>
+                                    <option value="3">BOB</option>
                                 </select>
                                 <span id="help-provider" class="help-block"></span>
                             </div>
